--- a/src/shared/FileList.scss
+++ b/src/shared/FileList.scss
@@ -9,5 +9,7 @@
     &__inner {
         width: 90%;
         table-layout: fixed;
+        border-collapse: separate;
+        border-spacing: 0 5px;
     }
 }
